set(WEBSERVER_CORE_LIBRARY_NAME ${WEBSERVER_TARGET_NAME}-core)

add_library(
    ${WEBSERVER_CORE_LIBRARY_NAME}
    ${WEBSERVER_INCLUDE_DIR}/network/host.h
    network/host.c
)

target_include_directories(
    ${WEBSERVER_CORE_LIBRARY_NAME} PUBLIC
    ${CMAKE_BINARY_DIR}
    ${WEBSERVER_INCLUDE_DIR}
)

add_library(wbs::core ALIAS ${WEBSERVER_CORE_LIBRARY_NAME})

set_target_properties(
    ${WEBSERVER_CORE_LIBRARY_NAME} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    EXPORT_NAME core
    LINKER_LANGUAGE CXX
)
